fix spacing

--- a/templates/css/main.scss
+++ b/templates/css/main.scss
@@ -276,13 +276,13 @@
     }
     .ruby {
       width: 8em;
-      margin: 1.5em auto .5em;
+      margin: 1.5em auto 1.5em;
     }
     .rackspace {
-      margin: 2em auto 1.2em;
+      margin: 2.05em auto 1.2em;
     }
     .akamai {
-      margin: 1em auto 2.5em;
+      margin: 1em auto 3em;
     }
   }
   h1 {
